--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ Django==3.2.13
 django-autoslug==1.9.8
 django-bootstrap-v5==1.0.11
 django-bootstrap5==21.3
+django-configurations==2.3.2
 django-crispy-forms==1.14.0
 django-heroku==0.3.1
 django-registration==3.3
+gunicorn==20.1.0
 Pillow==9.1.1
 psycopg2==2.9.3
 python-decouple==3.6
